[package]
authors = ["Acala Developers"]
description = "Utility pallet to perform ROOT calls in a PoA network"
edition = "2021"
license = "Apache-2.0"
name = "orml-authority"
repository = "https://github.com/open-web3-stack/open-runtime-module-library/tree/master/auction"
version = "0.4.1-dev"

[dependencies]
codec = {package = "parity-scale-codec", version = "2.3.1", default-features = false}
scale-info = {version = "1.0", default-features = false, features = ["derive"]}
serde = {version = "1.0.124", optional = true}
sp-io = {git = "https://github.com/ultrastable-money/substrate", branch = "hydro-dep-master", default-features = false}
sp-runtime = {git = "https://github.com/ultrastable-money/substrate", branch = "hydro-dep-master", default-features = false}
sp-std = {git = "https://github.com/ultrastable-money/substrate", branch = "hydro-dep-master", default-features = false}

frame-support = {git = "https://github.com/ultrastable-money/substrate", branch = "hydro-dep-master", default-features = false}
frame-system = {git = "https://github.com/ultrastable-money/substrate", branch = "hydro-dep-master", default-features = false}

[dev-dependencies]
pallet-scheduler = {git = "https://github.com/ultrastable-money/substrate", branch = "hydro-dep-master"}
sp-core = {git = "https://github.com/ultrastable-money/substrate", branch = "hydro-dep-master"}
sp-io = {git = "https://github.com/ultrastable-money/substrate", branch = "hydro-dep-master"}

[features]
default = ["std"]
runtime-benchmarks = [
  "frame-support/runtime-benchmarks",
  "frame-system/runtime-benchmarks",
]
std = [
  "serde",
  "codec/std",
  "scale-info/std",
  "sp-runtime/std",
  "sp-std/std",
  "frame-support/std",
  "frame-system/std",
]
try-runtime = ["frame-support/try-runtime"]
