[package]
authors = ["Laminar Developers <hello@laminar.one>"]
description = "Provide macro to benchmark pallets."
edition = "2021"
license = "Apache-2.0"
name = "orml-bencher"
repository = "https://github.com/open-web3-stack/open-runtime-module-library/tree/master/bencher"
version = "0.4.1-dev"

[dependencies]
ansi_term = {version = "0.12.1", optional = true}
bencher-procedural = {path = "bencher-procedural", default-features = false}
build-helper = {version = "0.1.1", optional = true}
cargo_metadata = {version = "0.14.1", optional = true}
codec = {package = "parity-scale-codec", version = "2.3.1", features = ["derive"], default-features = false}
frame-benchmarking = {git = "https://github.com/ultrastable-money/substrate", branch = "hydro-dep-master", default-features = false}
hash-db = {version = "0.15.2", default-features = false, optional = true}
linregress = {version = "0.4.4", optional = true}
parking_lot = {version = "0.11.2", optional = true}
paste = "1.0.6"
rand = {version = "0.8.3", optional = true}
sc-client-db = {git = "https://github.com/ultrastable-money/substrate", branch = "hydro-dep-master", default-features = false, features = ["with-kvdb-rocksdb"], optional = true}
sc-executor = {git = "https://github.com/ultrastable-money/substrate", branch = "hydro-dep-master", default-features = false, features = ["wasmtime"], optional = true}
sc-executor-common = {git = "https://github.com/ultrastable-money/substrate", branch = "hydro-dep-master", optional = true}
serde = {version = "1.0.124", optional = true, features = ['derive']}
serde_json = {version = "1.0.68", optional = true}
sp-core = {git = "https://github.com/ultrastable-money/substrate", branch = "hydro-dep-master", default-features = false}
sp-externalities = {git = "https://github.com/ultrastable-money/substrate", branch = "hydro-dep-master", default-features = false}
sp-io = {git = "https://github.com/ultrastable-money/substrate", branch = "hydro-dep-master", default-features = false}
sp-maybe-compressed-blob = {git = "https://github.com/ultrastable-money/substrate", branch = "hydro-dep-master", default-features = false, optional = true}
sp-runtime-interface = {git = "https://github.com/ultrastable-money/substrate", branch = "hydro-dep-master", default-features = false}
sp-state-machine = {git = "https://github.com/ultrastable-money/substrate", branch = "hydro-dep-master", default-features = false, optional = true}
sp-std = {git = "https://github.com/ultrastable-money/substrate", branch = "hydro-dep-master", default-features = false}
sp-storage = {git = "https://github.com/ultrastable-money/substrate", branch = "hydro-dep-master", default-features = false, optional = true}
tempfile = {version = "3.2.0", optional = true}
toml = {version = "0.5.8", optional = true}
walkdir = {version = "2.3.1", optional = true}
wasm-gc-api = {version = "0.1.11", optional = true}

[features]
bench = [
  "sp-io/disable_panic_handler",
]
default = ["std"]
std = [
  "bencher-procedural/std",
  "build-helper",
  "cargo_metadata",
  "tempfile",
  "toml",
  "walkdir",
  "ansi_term",
  "wasm-gc-api",
  "rand",
  "linregress",
  "parking_lot",
  "serde/std",
  "serde_json/std",
  "hash-db/std",
  "codec/std",
  "sp-core/std",
  "sp-std/std",
  "sp-io/std",
  "sp-runtime-interface/std",
  "sp-state-machine/std",
  "sc-executor/std",
  "sc-executor-common",
  "sc-client-db",
  "sp-maybe-compressed-blob",
  "frame-benchmarking/std",
  "sp-externalities/std",
  "sp-storage/std",
]
