[package]
authors = ["Laminar Developers <hello@laminar.one>"]
description = "Provide `MultiCurrency` implementation using `pallet-balances` and `orml-tokens` module."
edition = "2021"
license = "Apache-2.0"
name = "orml-currencies"
repository = "https://github.com/open-web3-stack/open-runtime-module-library/tree/master/currencies"
version = "0.4.1-dev"

[dependencies]
codec = {package = "parity-scale-codec", version = "2.3.1", default-features = false}
scale-info = {version = "1.0", default-features = false, features = ["derive"]}
serde = {version = "1.0.124", optional = true}
sp-io = {git = "https://github.com/ultrastable-money/substrate", branch = "polkadot-v0.9.16", default-features = false}
sp-runtime = {git = "https://github.com/ultrastable-money/substrate", branch = "polkadot-v0.9.16", default-features = false}
sp-std = {git = "https://github.com/ultrastable-money/substrate", branch = "polkadot-v0.9.16", default-features = false}

frame-support = {git = "https://github.com/ultrastable-money/substrate", branch = "polkadot-v0.9.16", default-features = false}
frame-system = {git = "https://github.com/ultrastable-money/substrate", branch = "polkadot-v0.9.16", default-features = false}

orml-traits = {path = "../traits", version = "0.4.1-dev", default-features = false}
orml-utilities = {path = "../utilities", version = "0.4.1-dev", default-features = false}

[dev-dependencies]
orml_tokens = {package = "orml-tokens", path = "../tokens", version = "0.4.1-dev"}
pallet-balances = {git = "https://github.com/ultrastable-money/substrate", branch = "polkadot-v0.9.16"}
sp-core = {git = "https://github.com/ultrastable-money/substrate", branch = "polkadot-v0.9.16"}

[features]
default = ["std"]
std = [
  "serde",
  "codec/std",
  "scale-info/std",
  "sp-runtime/std",
  "sp-std/std",
  "sp-io/std",
  "frame-support/std",
  "frame-system/std",
  "orml-traits/std",
  "orml-utilities/std",
]
try-runtime = ["frame-support/try-runtime"]
