[package]
authors = ["Acala Developers"]
description = "Non-fungible token pallet provides basic functions to create and manager NFT"
edition = "2021"
license = "Apache-2.0"
name = "orml-nft"
repository = "https://github.com/open-web3-stack/open-runtime-module-library/tree/master/nft"
version = "0.4.1-dev"

[dependencies]
codec = {package = "parity-scale-codec", version = "2.3.1", default-features = false, features = ["max-encoded-len"]}
scale-info = {version = "1.0", default-features = false, features = ["derive"]}
serde = {version = "1.0.124", optional = true}
sp-runtime = {git = "https://github.com/ultrastable-money/substrate", branch = "polkadot-v0.9.16", default-features = false}
sp-std = {git = "https://github.com/ultrastable-money/substrate", branch = "polkadot-v0.9.16", default-features = false}

frame-support = {git = "https://github.com/ultrastable-money/substrate", branch = "polkadot-v0.9.16", default-features = false}
frame-system = {git = "https://github.com/ultrastable-money/substrate", branch = "polkadot-v0.9.16", default-features = false}

[dev-dependencies]
sp-core = {git = "https://github.com/ultrastable-money/substrate", branch = "polkadot-v0.9.16"}
sp-io = {git = "https://github.com/ultrastable-money/substrate", branch = "polkadot-v0.9.16"}

[features]
default = ["std"]
std = [
  "serde",
  "codec/std",
  "scale-info/std",
  "sp-std/std",
  "sp-runtime/std",
  "frame-support/std",
  "frame-system/std",
]
try-runtime = ["frame-support/try-runtime"]
