[package]
authors = ["Laminar Developers <hello@laminar.one>"]
description = "Oracle module that makes off-chain data available on-chain."
edition = "2021"
license = "Apache-2.0"
name = "orml-oracle"
repository = "https://github.com/open-web3-stack/open-runtime-module-library/tree/master/oracle"
version = "0.4.1-dev"

[dependencies]
codec = {package = "parity-scale-codec", version = "2.3.1", default-features = false}
scale-info = {version = "1.0", default-features = false, features = ["derive"]}
serde = {version = "1.0.124", optional = true}
sp-application-crypto = {git = "https://github.com/ultrastable-money/substrate", branch = "hydro-dep-master", default-features = false}
sp-io = {git = "https://github.com/ultrastable-money/substrate", branch = "hydro-dep-master", default-features = false}
sp-runtime = {git = "https://github.com/ultrastable-money/substrate", branch = "hydro-dep-master", default-features = false}
sp-std = {git = "https://github.com/ultrastable-money/substrate", branch = "hydro-dep-master", default-features = false}

frame-support = {git = "https://github.com/ultrastable-money/substrate", branch = "hydro-dep-master", default-features = false}
frame-system = {git = "https://github.com/ultrastable-money/substrate", branch = "hydro-dep-master", default-features = false}

orml-traits = {path = "../traits", version = "0.4.1-dev", default-features = false}
orml-utilities = {path = "../utilities", version = "0.4.1-dev", default-features = false}

[dev-dependencies]
sp-core = {git = "https://github.com/ultrastable-money/substrate", branch = "hydro-dep-master", default-features = false}

[features]
default = ["std"]
std = [
  "serde",
  "codec/std",
  "scale-info/std",
  "sp-application-crypto/std",
  "sp-io/std",
  "sp-runtime/std",
  "sp-std/std",
  "frame-support/std",
  "frame-system/std",
  "orml-traits/std",
  "orml-utilities/std",
]
try-runtime = ["frame-support/try-runtime"]
