[package]
authors = ["Acala Developers"]
description = "Store and manage shares and rewards"
edition = "2021"
license = "Apache-2.0"
name = "orml-rewards"
repository = "https://github.com/open-web3-stack/open-runtime-module-library/tree/master/rewards"
version = "0.4.1-dev"

[dependencies]
codec = {package = "parity-scale-codec", version = "2.3.1", default-features = false, features = ["max-encoded-len"]}
frame-support = {git = "https://github.com/ultrastable-money/substrate", branch = "hydro-dep-polkadot-v0.9.16", default-features = false}
frame-system = {git = "https://github.com/ultrastable-money/substrate", branch = "hydro-dep-polkadot-v0.9.16", default-features = false}
orml-traits = {path = "../traits", version = "0.4.1-dev", default-features = false}
scale-info = {version = "1.0", default-features = false, features = ["derive"]}
serde = {version = "1.0.124", optional = true}
sp-core = {git = "https://github.com/ultrastable-money/substrate", branch = "hydro-dep-polkadot-v0.9.16", default-features = false}
sp-io = {git = "https://github.com/ultrastable-money/substrate", branch = "hydro-dep-polkadot-v0.9.16", default-features = false}
sp-runtime = {git = "https://github.com/ultrastable-money/substrate", branch = "hydro-dep-polkadot-v0.9.16", default-features = false}
sp-std = {git = "https://github.com/ultrastable-money/substrate", branch = "hydro-dep-polkadot-v0.9.16", default-features = false}

[dev-dependencies]
sp-core = {git = "https://github.com/ultrastable-money/substrate", branch = "hydro-dep-polkadot-v0.9.16"}

[features]
default = ["std"]
std = [
  "serde",
  "codec/std",
  "scale-info/std",
  "sp-runtime/std",
  "sp-io/std",
  "sp-std/std",
  "sp-core/std",
  "frame-support/std",
  "frame-system/std",
  "orml-traits/std",
]
try-runtime = ["frame-support/try-runtime"]
