[package]
authors = ["Laminar Developers <hello@laminar.one>"]
description = "Shared traits including `BasicCurrency`, `MultiCurrency`, `Auction` and more."
edition = "2021"
license = "Apache-2.0"
name = "orml-traits"
repository = "https://github.com/open-web3-stack/open-runtime-module-library/tree/master/traits"
version = "0.4.1-dev"

[dependencies]
codec = {package = "parity-scale-codec", version = "2.3.1", default-features = false}
frame-support = {git = "https://github.com/ultrastable-money/substrate", branch = "polkadot-v0.9.16", default-features = false}
impl-trait-for-tuples = "0.2.1"
num-traits = {version = "0.2.14", default-features = false}
orml-utilities = {path = "../utilities", version = "0.4.1-dev", default-features = false}
scale-info = {version = "1.0", default-features = false, features = ["derive"]}
serde = {version = "1.0.124", optional = true}
sp-io = {git = "https://github.com/ultrastable-money/substrate", branch = "polkadot-v0.9.16", default-features = false}
sp-runtime = {git = "https://github.com/ultrastable-money/substrate", branch = "polkadot-v0.9.16", default-features = false}
sp-std = {git = "https://github.com/ultrastable-money/substrate", branch = "polkadot-v0.9.16", default-features = false}
xcm = {git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.16", default-features = false}

[features]
default = ["std"]
std = [
  "serde",
  "codec/std",
  "scale-info/std",
  "sp-runtime/std",
  "sp-io/std",
  "sp-std/std",
  "num-traits/std",
  "frame-support/std",
  "orml-utilities/std",
  "xcm/std",
]
