[package]
authors = ["Acala Developers"]
description = "Unknown tokens module that implements `UnknownAsset` trait."
edition = "2021"
license = "Apache-2.0"
name = "orml-unknown-tokens"
repository = "https://github.com/open-web3-stack/open-runtime-module-library/tree/master/unknown-tokens"
version = "0.4.1-dev"

[dependencies]
codec = {package = "parity-scale-codec", version = "2.3.1", default-features = false}
frame-support = {git = "https://github.com/ultrastable-money/substrate", branch = "hydro-dep-polkadot-v0.9.16", default-features = false}
frame-system = {git = "https://github.com/ultrastable-money/substrate", branch = "hydro-dep-polkadot-v0.9.16", default-features = false}
scale-info = {version = "1.0", default-features = false, features = ["derive"]}
serde = {version = "1.0.124", optional = true}
sp-std = {git = "https://github.com/ultrastable-money/substrate", branch = "hydro-dep-polkadot-v0.9.16", default-features = false}

xcm = {git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.13", default-features = false}

orml-xcm-support = {path = "../xcm-support", default-features = false}

[dev-dependencies]
sp-core = {git = "https://github.com/ultrastable-money/substrate", branch = "hydro-dep-polkadot-v0.9.16"}
sp-io = {git = "https://github.com/ultrastable-money/substrate", branch = "hydro-dep-polkadot-v0.9.16"}
sp-runtime = {git = "https://github.com/ultrastable-money/substrate", branch = "hydro-dep-polkadot-v0.9.16"}

[features]
default = ["std"]
std = [
  "serde",
  "codec/std",
  "scale-info/std",
  "sp-std/std",
  "frame-support/std",
  "frame-system/std",
  "xcm/std",
  "orml-xcm-support/std",
]
try-runtime = ["frame-support/try-runtime"]
