[package]
authors = ["Laminar Developers <hello@laminar.one>"]
description = "Various utilities including `FixedU128` and `LinkedList`."
edition = "2021"
license = "Apache-2.0"
name = "orml-utilities"
repository = "https://github.com/open-web3-stack/open-runtime-module-library/tree/master/utilities"
version = "0.4.1-dev"

[dependencies]
codec = {package = "parity-scale-codec", version = "2.3.1", default-features = false}
frame-support = {git = "https://github.com/ultrastable-money/substrate", branch = "polkadot-v0.9.13", default-features = false}
scale-info = {version = "1.0", default-features = false, features = ["derive"]}
serde = {version = "1.0.124", optional = true}
sp-io = {git = "https://github.com/ultrastable-money/substrate", branch = "polkadot-v0.9.13", default-features = false}
sp-runtime = {git = "https://github.com/ultrastable-money/substrate", branch = "polkadot-v0.9.13", default-features = false}
sp-std = {git = "https://github.com/ultrastable-money/substrate", branch = "polkadot-v0.9.13", default-features = false}

[dev-dependencies]
frame-system = {git = "https://github.com/ultrastable-money/substrate", branch = "polkadot-v0.9.13"}
serde_json = "1.0.64"

[features]
default = ["std"]
std = [
  "serde",
  "codec/std",
  "scale-info/std",
  "frame-support/std",
  "sp-runtime/std",
  "sp-std/std",
  "sp-io/std",
]
