[package]
authors = ["Laminar Developers <hello@laminar.one>"]
description = "Provides scheduled balance locking mechanism, in a *graded vesting* way."
edition = "2021"
license = "Apache-2.0"
name = "orml-vesting"
repository = "https://github.com/open-web3-stack/open-runtime-module-library/tree/master/vesting"
version = "0.4.1-dev"

[dependencies]
codec = {package = "parity-scale-codec", version = "2.3.1", default-features = false, features = ["max-encoded-len"]}
scale-info = {version = "1.0", default-features = false, features = ["derive"]}
serde = {version = "1.0.124", optional = true}
sp-io = {git = "https://github.com/ultrastable-money/substrate", branch = "hydro-dep-2021-11-1", default-features = false}
sp-runtime = {git = "https://github.com/ultrastable-money/substrate", branch = "hydro-dep-2021-11-1", default-features = false}
sp-std = {git = "https://github.com/ultrastable-money/substrate", branch = "hydro-dep-2021-11-1", default-features = false}

frame-support = {git = "https://github.com/ultrastable-money/substrate", branch = "hydro-dep-2021-11-1", default-features = false}
frame-system = {git = "https://github.com/ultrastable-money/substrate", branch = "hydro-dep-2021-11-1", default-features = false}

[dev-dependencies]
pallet-balances = {git = "https://github.com/ultrastable-money/substrate", branch = "hydro-dep-2021-11-1"}
sp-core = {git = "https://github.com/ultrastable-money/substrate", branch = "hydro-dep-2021-11-1"}

[features]
default = ["std"]
runtime-benchmarks = [
  "frame-support/runtime-benchmarks",
  "frame-system/runtime-benchmarks",
]
std = [
  "serde",
  "codec/std",
  "scale-info/std",
  "sp-runtime/std",
  "sp-std/std",
  "sp-io/std",
  "frame-support/std",
  "frame-system/std",
]
try-runtime = ["frame-support/try-runtime"]
