[package]
authors = ["Laminar Developers <hello@laminar.one>"]
edition = "2021"
license = "Apache-2.0"
name = "orml-weight-meter"
version = "0.4.1-dev"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
frame-support = {git = "https://github.com/ultrastable-money/substrate", branch = "hydro-dep-master", default-features = false}
scale-info = {version = "1.0", default-features = false, features = ["derive"]}
weight-meter-procedural = {path = "weight-meter-procedural", default-features = false}

[dev-dependencies]
codec = {package = "parity-scale-codec", version = "2.3.1"}
serde = {version = "1.0.124"}
sp-io = {git = "https://github.com/ultrastable-money/substrate", branch = "hydro-dep-master"}
sp-runtime = {git = "https://github.com/ultrastable-money/substrate", branch = "hydro-dep-master"}
sp-std = {git = "https://github.com/ultrastable-money/substrate", branch = "hydro-dep-master"}

frame-support = {git = "https://github.com/ultrastable-money/substrate", branch = "hydro-dep-master"}
frame-system = {git = "https://github.com/ultrastable-money/substrate", branch = "hydro-dep-master"}
pallet-balances = {git = "https://github.com/ultrastable-money/substrate", branch = "hydro-dep-master"}

[features]
bench = [
  "weight-meter-procedural/bench",
]
default = ["std"]
std = [
  "scale-info/std",
  "frame-support/std",
  "weight-meter-procedural/std",
]
