[package]
authors = ["Acala Developers"]
description = "Supporting module for XCM integration."
edition = "2021"
license = "Apache-2.0"
name = "orml-xcm-support"
repository = "https://github.com/open-web3-stack/open-runtime-module-library/tree/master/xcm-support"
version = "0.4.1-dev"

[dependencies]
codec = {package = "parity-scale-codec", version = "2.3.1", default-features = false}

sp-runtime = {git = "https://github.com/ultrastable-money/substrate", branch = "hydro-dep-2021-11-1", default-features = false}
sp-std = {git = "https://github.com/ultrastable-money/substrate", branch = "hydro-dep-2021-11-1", default-features = false}

frame-support = {git = "https://github.com/ultrastable-money/substrate", branch = "hydro-dep-2021-11-1", default-features = false}

xcm = {git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.13", default-features = false}
xcm-executor = {git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.13", default-features = false}

orml-traits = {path = "../traits", version = "0.4.1-dev", default-features = false}

[features]
default = ["std"]
std = [
  "sp-std/std",
  "sp-runtime/std",
  "frame-support/std",
  "xcm/std",
  "xcm-executor/std",
  "orml-traits/std",
]
