[package]
authors = ["Acala Developers"]
description = "XCM message helpers."
edition = "2021"
license = "Apache-2.0"
name = "orml-xcm"
repository = "https://github.com/open-web3-stack/open-runtime-module-library/tree/master/xcm"
version = "0.4.1-dev"

[dependencies]
codec = {package = "parity-scale-codec", version = "2.3.1", default-features = false}
scale-info = {version = "1.0", default-features = false, features = ["derive"]}
sp-std = {git = "https://github.com/ultrastable-money/substrate", branch = "hydro-dep-master", default-features = false}

frame-support = {git = "https://github.com/ultrastable-money/substrate", branch = "hydro-dep-master", default-features = false}
frame-system = {git = "https://github.com/ultrastable-money/substrate", branch = "hydro-dep-master", default-features = false}

pallet-xcm = {git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.13", default-features = false}
xcm = {git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.13", default-features = false}

[dev-dependencies]
xcm-executor = {git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.13"}

[features]
default = ["std"]
std = [
  "codec/std",
  "scale-info/std",
  "sp-std/std",
  "frame-support/std",
  "frame-system/std",
  "xcm/std",
  "pallet-xcm/std",
]
try-runtime = ["frame-support/try-runtime"]
