[package]
authors = ["Acala Developers"]
description = "Cross-chain token transfer."
edition = "2021"
license = "Apache-2.0"
name = "orml-xtokens"
repository = "https://github.com/open-web3-stack/open-runtime-module-library/tree/master/xtokens"
version = "0.4.1-dev"

[dependencies]
codec = {package = "parity-scale-codec", version = "2.3.1", default-features = false}
scale-info = {version = "1.0", default-features = false, features = ["derive"]}
serde = {version = "1.0.124", optional = true}
sp-io = {git = "https://github.com/ultrastable-money/substrate", branch = "hydro-dep-master", default-features = false}
sp-runtime = {git = "https://github.com/ultrastable-money/substrate", branch = "hydro-dep-master", default-features = false}
sp-std = {git = "https://github.com/ultrastable-money/substrate", branch = "hydro-dep-master", default-features = false}

frame-support = {git = "https://github.com/ultrastable-money/substrate", branch = "hydro-dep-master", default-features = false}
frame-system = {git = "https://github.com/ultrastable-money/substrate", branch = "hydro-dep-master", default-features = false}

cumulus-primitives-core = {git = "https://github.com/paritytech/cumulus", branch = "hydro-dep-master", default-features = false}

xcm = {git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.13", default-features = false}
xcm-executor = {git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.13", default-features = false}

orml-traits = {path = "../traits", default-features = false}
orml-xcm-support = {path = "../xcm-support", default-features = false}

[dev-dependencies]
pallet-balances = {git = "https://github.com/ultrastable-money/substrate", branch = "hydro-dep-master"}
sp-core = {git = "https://github.com/ultrastable-money/substrate", branch = "hydro-dep-master"}

# cumulus
cumulus-pallet-dmp-queue = {git = "https://github.com/paritytech/cumulus", branch = "hydro-dep-master"}
cumulus-pallet-xcm = {git = "https://github.com/paritytech/cumulus", branch = "hydro-dep-master"}
cumulus-pallet-xcmp-queue = {git = "https://github.com/paritytech/cumulus", branch = "hydro-dep-master"}
cumulus-primitives-core = {git = "https://github.com/paritytech/cumulus", branch = "hydro-dep-master"}
parachain-info = {git = "https://github.com/paritytech/cumulus", branch = "hydro-dep-master"}

# polkadot
pallet-xcm = {git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.13"}
polkadot-parachain = {git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.13"}
polkadot-runtime-parachains = {git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.13"}
xcm = {git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.13"}
xcm-builder = {git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.13"}
xcm-executor = {git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.13"}
xcm-simulator = {git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.13"}

orml-tokens = {path = "../tokens"}
orml-xcm = {path = "../xcm"}

[features]
default = ["std"]
std = [
  "serde",
  "codec/std",
  "scale-info/std",
  "sp-runtime/std",
  "sp-std/std",
  "sp-io/std",
  "frame-support/std",
  "frame-system/std",
  "cumulus-primitives-core/std",
  "xcm/std",
  "xcm-executor/std",
  "orml-xcm-support/std",
  "orml-traits/std",
]
try-runtime = ["frame-support/try-runtime"]
# Needed because of cargo feature pollution.
runtime-benchmarks = [
  "xcm-builder/runtime-benchmarks",
  "pallet-xcm/runtime-benchmarks",
]
