[package]
authors = ["Laminar Developers <hello@laminar.one>"]
description = "RPC module for orml-oracle."
edition = "2021"
license = "Apache-2.0"
name = "orml-oracle-rpc"
version = "0.4.1-dev"

[dependencies]
codec = {package = "parity-scale-codec", version = "2.3.1"}
jsonrpc-core = "18.0.0"
jsonrpc-core-client = "18.0.0"
jsonrpc-derive = "18.0.0"
sp-api = {git = "https://github.com/ultrastable-money/substrate", branch = "hydro-dep-2021-11-1"}
sp-blockchain = {git = "https://github.com/ultrastable-money/substrate", branch = "hydro-dep-2021-11-1"}
sp-runtime = {git = "https://github.com/ultrastable-money/substrate", branch = "hydro-dep-2021-11-1"}

orml-oracle-rpc-runtime-api = {path = "runtime-api", version = "0.4.1-dev"}
