[package]
authors = ["Laminar Developers <hello@laminar.one>"]
description = "orml tokens rpc interface."
edition = "2021"
license = "Apache-2.0"
name = "orml-tokens-rpc"
version = "0.4.1-dev"

[dependencies]
codec = {package = "parity-scale-codec", version = "2.0.0"}
jsonrpc-core = "18.0.0"
jsonrpc-core-client = "18.0.0"
jsonrpc-derive = "18.0.0"

frame-support = {git = "https://github.com/ultrastable-money/substrate", branch = "polkadot-v0.9.16"}
orml-tokens-rpc-runtime-api = {version = "0.4.1-dev", path = "./runtime-api"}
sp-api = {git = "https://github.com/ultrastable-money/substrate", branch = "polkadot-v0.9.16"}
sp-blockchain = {git = "https://github.com/ultrastable-money/substrate", branch = "polkadot-v0.9.16"}
sp-core = {git = "https://github.com/ultrastable-money/substrate", branch = "polkadot-v0.9.16"}
sp-rpc = {git = "https://github.com/ultrastable-money/substrate", branch = "polkadot-v0.9.16"}
sp-runtime = {git = "https://github.com/ultrastable-money/substrate", branch = "polkadot-v0.9.16"}
