[package]
authors = ["Laminar Developers <hello@laminar.one>"]
description = "Runtime API module for orml-oracle-rpc."
edition = "2021"
license = "Apache-2.0"
name = "orml-oracle-rpc-runtime-api"
version = "0.4.1-dev"

[dependencies]
codec = {package = "parity-scale-codec", version = "2.3.1", default-features = false, features = ["derive"]}
sp-api = {git = "https://github.com/ultrastable-money/substrate", branch = "polkadot-v0.9.16", default-features = false}
sp-std = {git = "https://github.com/ultrastable-money/substrate", branch = "polkadot-v0.9.16", default-features = false}

[features]
default = ["std"]
std = [
  "codec/std",
  "sp-api/std",
  "sp-std/std",
]
