[package]
authors = ["Laminar Developers <hello@laminar.one>"]
description = "orml tokens rpc interface."
edition = "2021"
license = "Apache-2.0"
name = "orml-tokens-rpc-runtime-api"
version = "0.4.1-dev"

[dependencies]
codec = {package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"]}
frame-support = {git = "https://github.com/ultrastable-money/substrate", branch = "hydro-dep-polkadot-v0.9.16", default-features = false}
orml-tokens = {default-features = false, path = "../../../tokens"}
sp-api = {git = "https://github.com/ultrastable-money/substrate", branch = "hydro-dep-polkadot-v0.9.16", default-features = false}
sp-runtime = {git = "https://github.com/ultrastable-money/substrate", branch = "hydro-dep-polkadot-v0.9.16", default-features = false}

[features]
default = ["std"]
std = [
  "codec/std",
  "frame-support/std",
  "sp-api/std",
  "sp-runtime/std",
  "orml-tokens/std",
]
